--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
                 this.imports = ["container"];
                 this.onFullLoad = () => {
                     console.log(this.id + " has fully loaded!");
+                    console.log(this.querySelector("img"));
                 }
             }
             <container></container>
